--- a/_posts/2019-07-06-the-us-narrative-today.html
+++ b/_posts/2019-07-06-the-us-narrative-today.html
@@ -2590,107 +2590,107 @@ stories:
   domain: http://www.newsprogress.com/
   link: http://newsprogress.com/public-input-sought-on-titus-propertys-future-plans/
 images:
-- name: oldroad-old-road-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-dali-three.jpg
-- name: adam-smith-adam-smith-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-ww2-dresden.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-atari-asteroids.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-atari-asteroids.JPG
-- name: abe-lincoln-one-ww2-color-file-00-00-15-87.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-ww2-color-file-00-00-15-87.jpg
-- name: cargo-ship-cargo-ship-on-sea-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-aqua.jpg
-- name: lincoln-memorial-lincolnmemorial-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-ww2-color.jpg
-- name: white-house-lawn-white-house-window-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-kand-two.jpg
-- name: oldroad-old-road.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road.jpg
+- name: white-house-whitehouse-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-green-zuma.jpg
+- name: border-crossing-bordercrossing-cinnamon-rolls.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-cinnamon-rolls.png
+- name: stories-status-berlin-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-status-berlin-matrix.jpg
+- name: gears-4882162452-fa3126b38d-b-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-far-away.jpg
+- name: amusement-park-amusement-park-2-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-monet-one.jpg
+- name: oldroad-old-road-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-graham-sutherland.jpg
+- name: downtown-los-angeles-downtown-la-spagetti-accident.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-spagetti-accident.JPG
+- name: walled-garden-walled-garden-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-wols.jpg
 - name: old-gas-pumps-oldgaspumps-dali-three.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-dali-three.jpg
-- name: catacombs-catacombs-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-crunch-paper.jpg
-- name: meadowbutterfly-meadow-butterfly-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-sunday.jpg
-- name: liberty-back-statue-liberty-back-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-wols.jpg
-- name: machine-road-machine-road-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-purple-storm.jpg
-- name: mosaic-face-mosaic-face-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-blue-circuit.jpg
-- name: oldtrain-oldtrain-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-nazi-poster.jpg
-- name: beach-rocks-beach-rocks-currents-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-emily-carr.jpg
-- name: hollywood-building.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building.jpg
-- name: white-house-lawn-white-house-window-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-dry-skin.jpg
-- name: window-window-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-colorful-blocks.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-dark-rain.jpg
-- name: old-door-lock-old-door-lock-2-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-sand-paper.jpg
-- name: san-francisco-street-view-san-francisco-street-view-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-green-zuma.jpg
-- name: adam-smith-adam-smith-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-crafty-painting.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-attack-planes.jpg
-- name: old-granary-field-granaryfield-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-crunch-paper.jpg
-- name: blossombar-blue-brush-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-blue-brush-file-00-00-00-00.jpg
-- name: downtown-trucksilo-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-matrix.jpg
-- name: miamibeach-miamibeach-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-sunday.jpg
-- name: fence-fence-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-creativity.jpg
-- name: gypsy-wagon-gypsywagon-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-pablo-blue.jpg
-- name: ellis-island-ellisisland-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-aqua.jpg
-- name: oldbarn-oldbarn-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-matrix.jpg
-- name: dragon-desert-desert-dragon-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-crafty-painting.jpg
-- name: sand-hand-sand-hand-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-blue-electricity.jpg
-- name: white-house-lawn-white-house-window-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-green-zuma.jpg
-- name: san-francisco-street-view-san-francisco-street-view-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-purple-storm.jpg
-- name: status-berlin-status-berlin-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-oily-mcoilface.jpg
-- name: border-crossing-bordercrossing-diego-rivera1.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-diego-rivera1.png
-- name: machine-road-machine-road-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-crunch-paper.jpg
-- name: downtown-los-angeles-downtown-la-propaganda-leaflets.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-propaganda-leaflets.JPG
-- name: castle-on-hill-castle-on-hill-edinburgh-nazi-poster.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-nazi-poster.JPG
-- name: downtown-fredericksburg-downtown-fredericksburg-spagetti-accident.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-spagetti-accident.JPG
-- name: ellis-island-ellis-island-room-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-kandinsky-bv.jpg
-- name: abandonedbuildings_satan_red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_satan_red.jpg
-- name: hollywood-building-hollywood-building-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-sand-paper.jpg
-- name: eduardo-eduardo-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-far-away.jpg
-- name: status-berlin-status-berlin-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-copper-circuit-2.jpg
-- name: oldhotel-oldhotel-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-alien-goggles.jpg
-- name: powerlines-power-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-alberto-giacometti.jpg
-- name: yuma-bank-yuma-bak-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-crabapple.jpg
-- name: san-francisco-street-view-san-francisco-street-view-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-blue-circuit-5.jpg
+- name: nazi-invasion-IMG_6174.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_6174.jpg
+- name: blossombar-purple-storm-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-purple-storm-file-00-00-24-99.jpg
+- name: old-granary-field-granaryfield-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-space-pizza.jpg
+- name: scream-IMG_7788.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_7788.jpg
+- name: carry-load-carryload-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-purple-storm.jpg
+- name: oldhotel-oldhotel-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-emily-carr.jpg
+- name: border-crossing-bordercrossing-colored-circuits.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-colored-circuits.png
+- name: old-gas-pumps-oldgaspumps-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-oily-mcoilface.jpg
+- name: stories-new-42-16-600-400-0-max-1-1-1-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-42-16-600-400-0-max-1-1-1-5.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-far-away.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-far-away.JPG
+- name: yuma-bank-yuma-bak.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak.jpg
+- name: windowmountain-window-mountain-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-crabapple.jpg
+- name: mediterranean-mediterranean-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-colored-circuits.jpg
+- name: border-fence-border-fence-on-hill-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-space-pizza.jpg
+- name: adam-smith-adam-smith-feed-people.pxm
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-feed-people.pxm
+- name: oldcabin-store-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-smoking-cigarette.jpg
+- name: abandonedbuildings_gred_mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_gred_mash.jpg
+- name: gypsymosaic-gypsy-eyes-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-aqua.jpg
+- name: art-museum-art-museum-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-marcel-duchamp.jpg
+- name: yosemite-yosemite-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-light-dali.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-horiz-circuit.jpg
+- name: bordercrossing-bordercrossing-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-monet-one.jpg
+- name: oldhouse-granaryfield-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-rainbow-festival.jpg
+- name: downtheline-downtheline-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-plentiful.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-far-away.jpg
+- name: mosaic-face-mosaic-face-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-crabapple.jpg
+- name: christianity-christianity-under-construction-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-blue-circuit-3.jpg
+- name: oldhouse-oldhouse-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-atari-missle.jpg
+- name: white-house-whitehouse-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-sunday.jpg
+- name: downtown-trucksilo-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-dali-three.jpg
+- name: powerlines-power-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-green-zuma.jpg
+- name: downtheline-downtheline-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-wols.jpg
+- name: downtown-fredericksburg-kand-two.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-kand-two.JPG
+- name: capital-battle-capitolbattle-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-matrix.jpg
+- name: old-cabin-oldcabin-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-gred-mash.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-creativity.jpg
+- name: store-on-corner-store-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-yellow-collage.jpg
+- name: border-fence-border-fence-on-hill-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-dali-three.jpg
+- name: miamibeach-miamibeach-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-colorful-blocks.jpg
+- name: subway-subway-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-aqua.jpg
+- name: statue-of-liberty-front-view-statueofliberty-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-attack-planes.jpg
+- name: border-crossing-bordercrossing-hot-spicy.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-hot-spicy.png
 ---
 Natasha Palmatier Receives Edward Jones Award.&nbsp;Lithuanian Couple Crowned 'wife Carrying' World Champions.&nbsp;Dallas Murder Suspect Nabbed In Henderson County.&nbsp;Policy Leaders Are Listening To Vermont Businesses.&nbsp;Playhouse Presents Tempered Production Of Scottsboro Boys.&nbsp;Video Of The Week.&nbsp;Changing Of The Flags.&nbsp;The Reality Of Warming.&nbsp;
